failures/clang_other_error_Oi28tp.i.stderr.txt
libsystemd-login.c:1:37: error: expected ')'
obsolete_lib(sd_get_seats,libsystemd-login);
                                    ^
libsystemd-login.c:1:13: note: to match this '('
obsolete_lib(sd_get_seats,libsystemd-login);
            ^
libsystemd-login.c:1:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_get_seats,libsystemd-login);
             ^
libsystemd-login.c:2:40: error: expected ')'
obsolete_lib(sd_get_sessions,libsystemd-login);
                                       ^
libsystemd-login.c:2:13: note: to match this '('
obsolete_lib(sd_get_sessions,libsystemd-login);
            ^
libsystemd-login.c:2:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_get_sessions,libsystemd-login);
             ^
libsystemd-login.c:3:36: error: expected ')'
obsolete_lib(sd_get_uids,libsystemd-login);
                                   ^
libsystemd-login.c:3:13: note: to match this '('
obsolete_lib(sd_get_uids,libsystemd-login);
            ^
libsystemd-login.c:3:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_get_uids,libsystemd-login);
             ^
libsystemd-login.c:4:47: error: expected ')'
obsolete_lib(sd_login_monitor_flush,libsystemd-login);
                                              ^
libsystemd-login.c:4:13: note: to match this '('
obsolete_lib(sd_login_monitor_flush,libsystemd-login);
            ^
libsystemd-login.c:4:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_login_monitor_flush,libsystemd-login);
             ^
libsystemd-login.c:5:48: error: expected ')'
obsolete_lib(sd_login_monitor_get_fd,libsystemd-login);
                                               ^
libsystemd-login.c:5:13: note: to match this '('
obsolete_lib(sd_login_monitor_get_fd,libsystemd-login);
            ^
libsystemd-login.c:5:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_login_monitor_get_fd,libsystemd-login);
             ^
libsystemd-login.c:6:45: error: expected ')'
obsolete_lib(sd_login_monitor_new,libsystemd-login);
                                            ^
libsystemd-login.c:6:13: note: to match this '('
obsolete_lib(sd_login_monitor_new,libsystemd-login);
            ^
libsystemd-login.c:6:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_login_monitor_new,libsystemd-login);
             ^
libsystemd-login.c:7:47: error: expected ')'
obsolete_lib(sd_login_monitor_unref,libsystemd-login);
                                              ^
libsystemd-login.c:7:13: note: to match this '('
obsolete_lib(sd_login_monitor_unref,libsystemd-login);
            ^
libsystemd-login.c:7:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_login_monitor_unref,libsystemd-login);
             ^
libsystemd-login.c:8:45: error: expected ')'
obsolete_lib(sd_pid_get_owner_uid,libsystemd-login);
                                            ^
libsystemd-login.c:8:13: note: to match this '('
obsolete_lib(sd_pid_get_owner_uid,libsystemd-login);
            ^
libsystemd-login.c:8:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_pid_get_owner_uid,libsystemd-login);
             ^
libsystemd-login.c:9:43: error: expected ')'
obsolete_lib(sd_pid_get_session,libsystemd-login);
                                          ^
libsystemd-login.c:9:13: note: to match this '('
obsolete_lib(sd_pid_get_session,libsystemd-login);
            ^
libsystemd-login.c:9:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_pid_get_session,libsystemd-login);
             ^
libsystemd-login.c:10:50: error: expected ')'
obsolete_lib(sd_seat_can_multi_session,libsystemd-login);
                                                 ^
libsystemd-login.c:10:13: note: to match this '('
obsolete_lib(sd_seat_can_multi_session,libsystemd-login);
            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
